--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -31,274 +31,17 @@ ul {
   padding: 0;
   margin: 0;
 }
-.ib {
-  display: inline-block;
-}
-.wrapper {
-  box-sizing: border-box;
-  max-width: 1170px;
-  margin: 0 auto;
-}
 
 input::-ms-clear {
   display: none;
 }
 
-.form{
-  display: flex;
-  flex-direction: column;
-  padding: 20px 7px 28px;
-  background: #d3bda1 url("../img/biege__bgn.png");
-  width: 260px;
-  border-radius: 3px;
-  box-shadow: 0 0 0 5px #b9a182;
-  position: relative;
-  align-items: center;
-  z-index: auto;
-  &:before{
-    background: url(../img/aim.png);
-    width: 41px;
-    height: 39px;
-    content: '';
-    display: block;
-    position: absolute;
-    top: -1px;
-    left: -2px;
-  }
-  &:after{
-    content: '';
-    background: url("../img/arrow.png") no-repeat;
-    height: 332px;
-    width: 113px;
-    position: absolute;
-    right: -89px;
-    top: 113px;
-    z-index: -1;
-  }
-  &__discount{
-    height: 72px;
-    width: 72px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: url("../img/discount.png");
-    margin: -56px 0 0;
-    font-size: 26px;
-    font-weight: 900;
-    color: #fff;
-    img{
-      margin: 0 0 0 -7px;
-    }
-  }
-  &__time{
-    font-weight: 500;
-    font-size: 19px;
-    color: #000000;
-    text-align: center;
-    margin: 11px 0 0;
-    span{
-      font-weight: 700;
-    }
-  }
-  &__price{
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 215px;
-    padding: 13px 0 5px;
-    border-bottom: 1px solid #c2ae95;
-    &__old{
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      .head{
-        color: #5b5246;
-        font-size: 14px;
-      }
-      .price{
-        font-size: 32px;
-        color: #333333;
-        display: flex;
-        align-items: baseline;
-        position: relative;
-        &:after,
-        &:before{
-          content: '';
-          background: #a03a24;
-          width: 68px;
-          height: 1px;
-          display: block;
-          position: absolute;
-          transform: rotate(16deg);
-          top: 21px;
-        }
-        &:after{
-          transform: rotate(-16deg);
-        }
-        .curr{
-          font-size: 16px;
-        }
-      }
-    }
-    &__new{
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      position: relative;
-      &:before{
-        content: '';
-        display: block;
-        width: 1px;
-        height: 30px;
-        background: #c2ae95;
-        position: absolute;
-        left: -14px;
-        top: 24px;
-      }
-      .head{
-        color: #000000;
-        font-size: 14px;
-      }
-      .price{
-        font-size: 38px;
-        color: #9b3020;
-        display: flex;
-        align-items: baseline;
-        position: relative;
-        line-height: 42px;
-
-        .curr{
-          font-size: 16px;
-        }
-      }
-    }
-  }
-  &__stock{
-    text-align: center;
-    color: #222222;
-    font-size: 16px;
-    margin: 15px 0;
-    .lastpack{
-      font-weight: 700;
-    }
-  }
-  form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    .input-name, .input-phone{
-      position: relative;
-      &:before{
-        background: url("../img/name.svg");
-        width: 19px;
-        height: 23px;
-        position: absolute;
-        content: '';
-        top: 16px;
-        left: 13px;
-      }
-    }
-    .input-phone{
-      &:before{
-        background: url("../img/tel.svg");
-        width: 21px;
-        height: 24px;
-        top: 18px;
-        left: 15px;
-      }
-    }
-    .input-name, .input-phone{
-      input{
-        margin: 0 0 15px;
-        border: none;
-        padding: 20px 7px 20px 47px;
-        box-sizing: border-box;
-        width: 219px;
-        border-radius: 5px;
-        background: #ffffff;
-      }
-    }
-  }
-}
-.main__btn{
-  background: #9b3020;
-  color: #ffffff;
-  font-family: Roboto Slab, serif;
-  font-weight: 700;
-  font-size: 28px;
-  border: none;
-  text-align: center;
-  line-height: 17px;
-  border-radius: 5px;
-  width: 100%;
-  padding: 12px 22px;
-  margin: 7px 0 0;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  box-shadow: 3px 4px 0 0 #752918;
-  transition: 0.5s;
-  position: relative;
-  .with__discount{
-    font-size: 14px;
-    font-family: Roboto, sans-serif;
-    opacity: 0.75;
-    font-weight: 400;
-  }
-  &:hover{
-    box-shadow: none;
-  }
-  //&:active{
-  //  box-shadow: none;
-  //  left: 2px;
-  //  top: 3px;
-  //}
-}
-
-
 ::-webkit-input-placeholder { color: #333333; font-size: 16px; }
-::-moz-placeholder          { color: #333333; font-size: 16px; } /* Firefox 19+ */
-:-moz-placeholder           { color: #333333; font-size: 16px; } /* Firefox 18- */
+::-moz-placeholder          { color: #333333; font-size: 16px; }
+:-moz-placeholder           { color: #333333; font-size: 16px; }
 :-ms-input-placeholder      { color: #333333; font-size: 16px; }
 
-.title {
-  font-size: 40px;
-  text-align: center;
-  line-height: 38px;
-  font-weight: 900;
-  &-inner {
-    position: relative;
-    &:before,
-    &:after {
-      content: "";
-      position: absolute;
-      background: url("../img/title-before.svg") no-repeat;
-      top: -20px;
-      height: 60px;
-      width: 105px;
-    }
-    &:before {
-      left: -140px;
-    }
-    &:after {
-      right: -140px;
-      transform: scale(-1, 1);
-    }
-  }
-}
-.title-slab{
-  font-family: Roboto Slab, serif;
-}
-.text__beige {
-  color: #dfbd96;
-}
-.text__red{
-  color: #9b3020;
-}
-.text__left{
-  text-align: left;
-}
-
+@import "mixins";
 @import "common/a__header";
 @import "common/b__history";
 @import "common/c__today";
@@ -312,55 +55,67 @@ input::-ms-clear {
 @import "common/slick.scss";
 @import "common/slick-theme.scss";
 
-@media screen and (max-width: 1190px){
-  .wrapper {
+.container {
+  max-width: 1170px;
+  margin: 0 auto;
+
+  @include desktop {
     width: 100%;
     padding-right: 10px;
     padding-left: 10px;
-
   }
-  .block {
-    padding: 60px 0;
-  }
-  .title {
-    font-size: 36px;
-  }
-}
-
-
-@media screen and (max-width: 1169px) {
 
 }
 
-@media (max-width: 1023px){
-  .title {
-    font-size: 39px;
-    line-height: 39px;
-  }
+.block {
+  padding: 60px 0;
 
-  .block {
+  @include laptop {
     padding: 40px 0;
   }
-}
 
-@media (max-width: 767px) {
-  .title {
-    font-size: 34px;
-    line-height: 34px;
-  }
-  .block {
+  @include tablet {
     padding: 30px 0;
   }
-}
 
-
-@media (max-width: 479px) {
-  .title {
-    font-size: 29px;
-    line-height: 29px;
-  }
-
-  .block {
+  @include phone {
     padding: 25px 0;
   }
+
+}
+
+.title {
+  position: relative;
+  font-size: 48px;
+  line-height: 1;
+  text-align: center;
+
+  @include laptop {
+    font-size: 39px;
+  }
+
+  @include tablet {
+    font-size: 34px;
+  }
+
+  @include phone {
+    font-size: 29px;
+  }
+
+}
+
+.title-decor {
+  margin-top: 83px;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: -83px;
+    left: 50%;
+    transform: translateX(-50%); 
+    width: 92px;
+    height: 65px;
+    background: url('../img/section-decor.png') no-repeat 0 0;
+  }
+
 }
