--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -2,11 +2,10 @@ doctype html
 html
   head
     meta(charset="utf-8")
-    title Купить HuntExpert недорого. Цены, отзывы. Закажите HuntExpert сейчас!
+    title Купить Микоцин недорого. Цены, отзывы. Закажите Микоцин сейчас!
     meta(content="width=device-width, initial-scale=1" name="viewport")
     meta(content="ie=edge" http-equiv="x-ua-compatible")
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto:400,500,700" subset=cyrillic" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&amp;subset=cyrillic" rel="stylesheet">
     link(href="img/favicon.ico" rel="icon")
     link(rel='stylesheet' href='css/app.css')
     link(rel='stylesheet' href='css/foundation.css')
