--- a/source/style/mixins.scss
+++ b/source/style/mixins.scss
@@ -1,18 +1,22 @@
 @mixin placeholder($color: #000000) {
     &::-webkit-input-placeholder {
     color: $color;
+    font-size: 16px;
   }
   
     &::-moz-placeholder {
       color: $color;
+      font-size: 16px;
     }
   
     &:-ms-input-placeholder {
       color: $color;
+      font-size: 16px;
     }
   
     &:-moz-placeholder {
       color: $color;
+      font-size: 16px;
     }
   
   }
