--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -5,20 +5,22 @@ html
     title Купить Микоцин недорого. Цены, отзывы. Закажите Микоцин сейчас!
     meta(content="width=device-width, initial-scale=1" name="viewport")
     meta(content="ie=edge" http-equiv="x-ua-compatible")
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&amp;subset=cyrillic" rel="stylesheet">
+    link(href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&amp;subset=cyrillic" rel="stylesheet")
     link(href="img/favicon.ico" rel="icon")
     link(rel='stylesheet' href='css/app.css')
     link(rel='stylesheet' href='css/foundation.css')
   body
-    include ../common/a__header.html
-    include ../common/b__history.html
-    include ../common/c__today.html
-    include ../common/d__feel.html
-    include ../common/e__effect.html
-    include ../common/f__expert.html
-    include ../common/g__reviews.html
-    include ../common/h__reciept.html
-    include ../common/i__footer.html
+    include ../common/a__intro.html
+    include ../common/b__danger.html
+    include ../common/c__inefficient.html
+    include ../common/d__description.html
+    include ../common/e__complex.html
+    include ../common/f__recommendation.html
+    include ../common/g__composition.html
+    include ../common/h__use.html
+    include ../common/i__reviews.html
+    include ../common/j__delivery.html
+    include ../common/k__intro-bottom.html
     include ../common/popup.html
 
 
