--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -81,10 +81,28 @@ input::-ms-clear {
 
 }
 
+.font {
+  &_light {
+    font-weight: 300;
+  }
+  &_medium {
+    font-weight: 500;
+  }
+  &_bold {
+    font-weight: 700;
+  }
+  &_black {
+    font-weight: 900;
+  }
+  &_italic {
+    font-style: italic;
+  }
+}
+
 .title {
   position: relative;
   font-size: 48px;
-  line-height: 1;
+  line-height: normal;
   text-align: center;
 
   @include laptop {
