--- a/source/template/common/b__danger.html
+++ b/source/template/common/b__danger.html
@@ -1,7 +1,7 @@
 <section class="block danger">
     <div class="container">
         <h2 class="title title-decor danger-title">Грибок – это опасная инфекция</h2>
-        <p class="danger-slogan font_bold">которая угрожает вам и вашим близким, ведь с каждым днем грибок приводит к:</p>
+        <p class="danger-slogan font_bold">которая угрожает вам и вашим близким, ведь с каждым днем грибок приводит&nbsp;к:</p>
         <div class="danger-wrap">
             <div class="danger-item">
                 <div class="danger-item__content">
