--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -11,7 +11,7 @@ html
     link(rel='stylesheet' href='css/foundation.css')
   body
     include ../common/a__intro.html
-    include ../common/b__danger.html
+    //include ../common/b__danger.html
     include ../common/c__inefficient.html
     include ../common/d__description.html
     include ../common/e__complex.html
