--- a/source/template/common/a__intro.html
+++ b/source/template/common/a__intro.html
@@ -38,23 +38,16 @@
             <div class="intro__product">
                 <img src="img/intro-legs.png" alt="" class="intro__product-legs">
                 <div class="intro__product-pic">
+                    <div class="intro__circle">
+                        <svg class="intro__circle-img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 160 170">
+                            <circle r="78" cx="78" cy="78"></circle>
+                        </svg>
+                    </div>
                     <img src="img/intro-room.png" alt="" class="intro__product-img">
-                </div>
-                <div class="intro__pack">
-                    <div class="intro__pack-tablets">
-                        <div class="intro__pack-label font_black">299₽</div>
-                        <img src="img/product-pack-tab.png" alt="" class="intro__pack-img">
-                        <img src="img/product-tablets.png" alt="" class="intro__pack-img intro__pack-img_tablets">
-                    </div>
-                    <div class="intro__pack-gel">
-                        <div class="intro__pack-label intro__pack-label_island font_black">299₽</div>
-                        <img src="img/product-gel.png" alt="" class="intro__pack-img intro__pack-img_gel">
-                    </div>
-                    <img src="img/product-stick.png" alt="" class="intro__pack-img intro__pack-img_stick">
                 </div>
             </div>
             <div class="intro__desc">
-                <h1 class="intro__title font_black">Комплексное избавление от грибка — <span class="intro__title-small font_bold"> <span class="border-orange-big">изнутри</span> и <span class="border-green-big">снаружи</span></span></h1>
+                <h1 class="intro__title font_black">Комплексное избавление от&nbsp;грибка — <span class="intro__title-small font_bold"> <span class="border-orange-big">изнутри</span>&nbsp;и <span class="border-green-big">снаружи</span></span></h1>
                 <ul class="intro__desc-list">
                     <li class="intro__desc-item">
                         <div class="intro__desc-bullet font_bold">2в1</div>
@@ -82,11 +75,19 @@
                 </ul>
             </div>
             <div class="intro__form">
-                <div class="form">
-                    <div class="intro__delivery">
-                        <img src="img/delivery-icon.svg" alt="" class="intro__delivery-icon">
-                        <span class="intro__delivery-text">Бесплатно</span>
+                <div class="intro__pack">
+                    <div class="intro__pack-tablets">
+                        <div class="intro__pack-label font_black">299 <span class="intro__pacl-currency">₽</span></div>
+                        <img src="img/product-pack-tab.png" alt="" class="intro__pack-img">
+                        <img src="img/product-tablets.png" alt="" class="intro__pack-img intro__pack-img_tablets">
                     </div>
+                    <div class="intro__pack-gel">
+                        <div class="intro__pack-label intro__pack-label_island font_black">299 <span class="intro__pacl-currency">₽</span></div>
+                        <img src="img/product-gel.png" alt="" class="intro__pack-img intro__pack-img_gel">
+                    </div>
+                    <img src="img/product-stick.png" alt="" class="intro__pack-img intro__pack-img_stick">
+                </div>
+                <div class="form">
                     <div class="form__wrap">
                         <div class="form__title">
                             Успейте заказать со скидкой <br> <span class="form__title-accent font_medium">до <span class="date-0" data-format="mm.dd.yyyy">10.09.2018</span></span>
@@ -115,7 +116,7 @@
                             </div>
                         </form>
                         <div class="form__lastpack">
-                            Осталось <span class="form__lastpack-accent font_medium lastpack">10</span> упаковок со скидкой
+                            Осталось <span class="form__lastpack-accent font_medium lastpack">10</span> упаковок <br> со скидкой
                         </div>
                     </div>
                     <div class="form__security">
