kh add background-image for intro section

--- a/source/style/common/a__intro.scss
+++ b/source/style/common/a__intro.scss
@@ -1,9 +1,9 @@
 /*header*/
 .intro {
   background-color: #f3f9ff;
-  // background-image: url('../img/intro-bg-left.png');
-  // background-position: -300px 0;
-  // background-repeat: no-repeat;
+  background-image: url('../img/intro-bg-left.png');
+  background-position: -300px 0;
+  background-repeat: no-repeat;
 }
 
 .intro__header {
