--- a/source/template/common/c__inefficient.html
+++ b/source/template/common/c__inefficient.html
@@ -1,5 +1,54 @@
 <section class="block inefficient">
     <div class="container">
-        <h2 class="title title-decor inefficient-title">Почему большинство средств против грибка малоэффективны </h2>
+        <h2 class="title title-decor inefficient-title">Почему большинство средств против грибка малоэффективны</h2>
+        <div class="inefficient-wrap">
+            <div class="inefficient-item">
+                <div class="inefficient-item__img">
+                    <img src="img/inefficient-star.svg" alt="">
+                </div>
+                <p class="inefficient-item__title font_bold">Чудо-средства</p>
+                <p class="inefficient-item__slogan font_medium">Обещают, что избавят от грибка меньше, чем за месяц, хотя это&nbsp;невозможно. </p>
+                <p class="inefficient-item__warning font_black">Но <span class="inefficient-open js-add-inefficient-class"></span></p>
+                <p class="inefficient-item__text color-text_grey">Ноготь – это роговой слой кожи.<br> Он не имеет живых клеток. Часть ногтя, которая уже поражена грибком,
+                    не может выздороветь до&nbsp;полного его отрастания. Единственный способ вылечить грибок – <span class="color-text_black font_medium">подавлять его распространение все время,<br>
+                        пока ноготь не отрастет заново.</span><br> Для этого требуется 4-6 месяцев.
+                </p>
+            </div>
+            <div class="inefficient-item">
+                <div class="inefficient-item__img">
+                    <img src="img/inefficient-gel.svg" alt="">
+                </div>
+                <p class="inefficient-item__title font_bold">Наружные средства</p>
+                <p class="inefficient-item__slogan font_medium">Способны устранить внешние проявления грибка.
+                    <span>(кремы, лаки, пластыри)</span></p>
+                <p class="inefficient-item__warning font_black">Но <span class="inefficient-open js-add-inefficient-class"></span></p>
+                <p class="inefficient-item__text color-text_grey">
+                    Очаг заражения находится<br> под ногтевой пластиной, а&nbsp;наружные средства  не способны его достичь - они действуют только на верхнем слое ногтя,
+                    поэтому <span class="color-text_black font_medium">не способны
+                    избавить от грибка.</span>Для повышения их эффективности рекомендуется <span class="color-text_black font_medium">спиливать ноготь полностью,</span><br>
+                    но это больно, некрасиво и&nbsp;совершенно <span class="color-text_black font_medium">не дает гарантий выздоровления.</span>
+                </p>
+            </div>
+            <div class="inefficient-item">
+                <div class="inefficient-item__img">
+                    <img src="img/inefficient-pills.svg" alt="">
+                </div>
+                <p class="inefficient-item__title font_bold">Внутренние средства</p>
+                <p class="inefficient-item__slogan font_medium">Убивают грибковую инфекцию в&nbsp;организме. <span>(таблетки, саше, капли)</span></p>
+                <p class="inefficient-item__warning font_black">Но <span class="inefficient-open js-add-inefficient-class"></span></p>
+                <p class="inefficient-item__text color-text_grey"><span class="color-text_black font_medium">Могут подействовать только<br> при длительном использовании</span>
+                    (6&nbsp;-&nbsp;8&nbsp;месяцев).За это время внутренние средства в 93%<br> случаев наносят
+                    <span class="color-text_black font_medium">серьезный<br> ущерб печени,</span> вызывают сыпь, отеки, диарею, рвоту.
+                    К тому же, каждое средство эффективно<br> только против одной группы<br> грибка из 4000 видов.
+                </p>
+            </div>
+        </div>
+        <div class="inefficient-conclusion">
+            <p class="inefficient-conclusion__text">
+            Даже если вы используете наружные и внутренние средства одновременно, это <span class="font_medium color-text_black">не гарантирует<br>
+            избавления от грибка:</span> они могут конфликтовать между собой по составу и блокировать действие<br>
+            друг друга или быть неэффективными против вашего типа грибка.
+            </p>
+        </div>
     </div>
 </section>
