--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -12,8 +12,8 @@ html
   body
     include ../common/a__intro.html
     //include ../common/b__danger.html
-    include ../common/c__inefficient.html
-    include ../common/d__description.html
+    //include ../common/c__inefficient.html
+    //include ../common/d__description.html
     include ../common/e__complex.html
     include ../common/f__recommendation.html
     include ../common/g__composition.html
