--- a/source/style/common/c__inefficient.scss
+++ b/source/style/common/c__inefficient.scss
@@ -1,5 +1,270 @@
 .inefficient {
+  background-color: #f3f9ff;
   &-title {
-    margin-bottom: 40px;
+    margin-bottom: 80px;
+    line-height: 1 !important;
+  }
+  &-wrap {
+    display: flex;
+    margin-bottom: 60px;
+  }
+  &-item {
+    width: 33%;
+    border-top: 5px solid #a8c53a;
+    background-color: #fff;
+    margin-right: 30px;
+    border-radius: 7px;
+    text-align: center;
+    position: relative;
+    padding: 63px 25px 35px;
+    &:last-child {
+      margin-right: 0;
+    }
+    &__img {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      background: #f3f9ff;
+      border-radius: 50%;
+      top: -50px;
+      left: 50%;
+      transform: translate(-50%, 0);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    &__title {
+      font-size: 24px;
+      margin-bottom: 9px;
+    }
+    &__slogan {
+      color: #222222;
+      font-size: 18px;
+      line-height: 1.5;
+      margin-bottom: 47px;
+      span {
+        display: block;
+        color: #666666;
+        font-size: 16px;
+        font-style: italic;
+        font-weight: 400;
+      }
+    }
+    &__warning {
+      color: #ff6b00;
+      font-size: 24px;
+      position: relative;
+      margin-bottom: 10px;
+      &:before,
+      &:after{
+        content: "";
+        position: absolute;
+      }
+      &:before {
+        left: 50%;
+        transform: translate(-50%, 0);
+        background-color: #d2dce6;
+        height: 2px;
+        width: 330px;
+        top: -27px;
+      }
+      &:after {
+        background-color: #fff;
+        width: 22px;
+        height: 22px;
+        left: 47%;
+        top: -37px;
+        transform: rotate(45deg);
+        box-sizing: border-box;
+        border-bottom: 1px solid #d2dce6;
+        border-right: 1px solid #d2dce6;
+      }
+    }
+    &__text {
+      font-size: 18px;
+      line-height: 1.4;
+    }
+  }
+  &-open {
+    display: none;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translate(0, -50%);
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #ff6b00;
+    &:before {
+      content: "+";
+      color: #fff;
+      font-size: 18px;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+  &-conclusion {
+    position: relative;
+    border: 3px solid #f4d3bb;
+    background-color: #f3f9ff;
+    border-radius: 5px;
+    text-align: center;
+    padding: 25px 10px;
+    &:before,
+    &:after {
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%, 0);
+    }
+    &:before {
+      content: "!";
+      color: #f4d3bb;
+      font-size: 70px;
+      font-weight: 700;
+      top: -49px;
+      width: 170px;
+      height: 50px;
+      background: #f3f9ff;
+      z-index: 2;
+    }
+    &:after {
+      content: "ВЫВОД:";
+      top: -16px;
+      color: #000000;
+      font-size: 22px;
+      font-weight: 700;
+      z-index: 3;
+    }
+    &__text {
+      color: #444444;
+      font-size: 21px;
+      line-height: 1.3;
+    }
+  }
+}
+
+@media screen and (max-width: 1189px) {
+  .inefficient {
+    &-item {
+      padding: 63px 20px 20px;
+      margin-right: 10px;
+      &__warning {
+        &:before {
+          width: 100%;
+        }
+      }
+      &__text {
+        br {
+          display: none;
+        }
+      }
+    }
+    &-conclusion {
+      &__text {
+        font-size: 20px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .inefficient {
+    &-title {
+      margin-bottom: 60px;
+    }
+    &-wrap {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    &-item {
+      width: 360px;
+      margin-bottom: 50px;
+      margin-right: 0;
+      &:nth-child(2n) {
+        margin-left: 20px;
+      }
+      &:last-child {
+        margin-bottom: 0;
+      }
+      &__slogan {
+        min-height: 74px;
+      }
+      &__warning {
+        line-height: 1;
+      }
+    }
+    &-conclusion {
+      &__text {
+        font-size: 18px;
+        br {
+          display: none;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 767px) {
+  .inefficient {
+    &-wrap {
+      align-items: flex-start;
+    }
+    &-item {
+      width: calc(50% - 10px);
+      &.active {
+        .inefficient-item__text {
+          max-height: 325px;
+          transition: 1s;
+        }
+        .inefficient-open {
+          &:before {
+            content: "-";
+          }
+        }
+      }
+      &__warning {
+        &:after {
+          left: 46%;
+        }
+      }
+      &__slogan {
+        margin-bottom: 40px;
+      }
+      &__text {
+        overflow: hidden;
+        max-height: 0;
+        transition: 1s;
+      }
+    }
+    &-open {
+      display: block;
+    }
+  }
+}
+
+@media screen and (max-width: 639px) {
+  .inefficient {
+    &-title {
+      br {
+        display: none;
+      }
+    }
+    &-item {
+      width: 320px;
+      margin-left: 0 !important;
+    }
+    &-conclusion {
+      &__text {
+        font-size: 16px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 479px){
+  .inefficient {
+    &-item {
+      padding: 60px 10px 20px;
+    }
   }
 }
