--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -120,7 +120,7 @@ img {
     width: 100%;
     height: 5px;
     background-color: #ff6b00;
-    bottom: 0;
+    bottom: -1px;
     left: 0;
     z-index: -1;
   }
@@ -154,7 +154,7 @@ img {
     width: 100%;
     height: 5px;
     background-color: #a7c93d;
-    bottom: 0;
+    bottom: -1px;
     left: 0;
     z-index: -1;
   }
@@ -181,6 +181,7 @@ img {
 .title {
   position: relative;
   font-size: 48px;
+  font-weight: 900;
   line-height: normal;
   text-align: center;
 
