change name button

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -181,6 +181,39 @@ img {
 
 }
 
+.btn-box {
+  width: 100%;
+  margin: 15px 0 20px;
+  padding: 5px;
+  background: rgb(255,190,2);
+  background: linear-gradient(to right, rgba(255,190,2,1) 0%,rgba(255,204,2,1) 100%);
+  border-radius: 100px;
+  cursor: pointer;
+  transition: .2s;
+
+  &:hover {
+    box-shadow: 0 0 15px 5px #ffd34a;
+  }
+
+}
+
+.btn {
+  display: block;
+  padding: 9px 39px 6px 41px;
+  font-size: 28px;
+  line-height: 0.6;
+  background-color: transparent;
+  border: 3px solid #ffd24e;
+  border-radius: 100px;
+
+  .small-text {
+    font-size: 16px;
+    line-height: 1;
+  }
+
+}
+
+
 .title {
   position: relative;
   font-size: 48px;
