--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -15,11 +15,11 @@ html
     //include ../common/c__inefficient.html
     //include ../common/d__description.html
     //include ../common/e__complex.html
-    include ../common/f__recommendation.html
-    include ../common/g__composition.html
+    //include ../common/f__recommendation.html
+    //include ../common/g__composition.html
     include ../common/h__use.html
-    include ../common/i__reviews.html
-    include ../common/j__delivery.html
+    //include ../common/i__reviews.html
+    //include ../common/j__delivery.html
     include ../common/k__intro-bottom.html
     include ../common/popup.html
 
