kh intro-bottom section

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -53,6 +53,7 @@ img {
 @import "common/i__reviews";
 @import "common/j__delivery";
 @import "common/k__intro-bottom";
+@import "common/l__footer";
 @import "common/popup";
 @import "common/slick";
 @import "common/slick-theme";
