--- a/source/style/common/g__composition.scss
+++ b/source/style/common/g__composition.scss
@@ -1,6 +1,7 @@
 .title.composition__title {
     max-width: 780px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     color: #383334;
     line-height: 1;
 
@@ -29,7 +30,7 @@
         padding-right: 45px;
 
         @include desktop {
-            padding-right: 20px;
+            padding-right: 40px;
         }
 
         @include laptop {
@@ -46,7 +47,7 @@
         padding-left: 45px;
 
         @include desktop {
-            padding-left: 20px;
+            padding-left: 40px;
         }
 
         @include laptop {
@@ -62,7 +63,7 @@
             position: absolute;
             left: 0;
             top: 30px;
-            bottom: 50px;
+            bottom: 30px;
             display: block;
             width: 1px;
             background-color: #d2dce6;
@@ -119,28 +120,29 @@
 .composition__item {
     display: flex;
     justify-content: space-between;
-    min-height: 180px;
 
-    @include laptop {
-        min-height: 155px;
-    }
+    // @include laptop {
+    //     min-height: 155px;
+    // }
 
     @include tablet {
         justify-content: space-evenly;
     }
 
     &:not(:last-child) {
+        margin-bottom: 30px;
 
-        .composition__item-text {
-            // padding-bottom: 26px;
-            // border-bottom: 1px solid #d2dce6;
-
-            // @include laptop {
-            //     padding-bottom: 15px;
-            // }
+        @include big-tablet {
+            margin-bottom: 20px;
         }
+
         .composition__desc {
+            padding-bottom: 25px;
             border-bottom: 1px solid #d2dce6;
+
+            @include big-tablet {
+                padding-bottom: 10px;
+            }
         }
     }
 }
@@ -149,11 +151,15 @@
     width: 334px;
 
     @include desktop {
-        width: 320px;
+        width: 315px;
+        padding: 0 0 0 10px;
     }
 
     @include laptop {
         width: 300px;
+    }
+
+    @include big-tablet {
         padding: 0 0 0 5px;
     }
 
@@ -190,15 +196,17 @@
 .composition__item-pic {
     width: 175px;
 
-    @include desktop {
-        width: 160px;
+    @include big-tablet {
+        width: 100px;
     }
 
-
+    @include tablet {
+        width: 175px;
+    }
 }
 
 .composition__item-pic_margined {
-    margin-top: -30px;
+    margin-top: -40px;
 }
 
 .composition__section_gel {
@@ -214,12 +222,15 @@
     .composition__desc {
         text-align: right;
 
-        @include laptop {
+        @include desktop {
+            padding: 0 10px 0 0;
+        }
+
+        @include big-tablet {
             padding: 0 5px 0 0;
         }
 
         @include tablet{
-            padding: 0 0 0 10px;
             text-align: left;
         }
     }
@@ -247,21 +258,29 @@
 
 .composition__footnote {
     position: relative;
-    padding: 39px 38px 28px 42px;
-    margin-top: 21px;
+    padding: 34px 38px 33px 90px;
+    margin-top: 67px;
     border: 2px solid #d2dce6;
     text-align: center;
+    line-height: 1.3;
     border-radius: 9px;
 
+    @include laptop {
+        padding: 25px 5px 10px;
+    }
+
+    @include big-tablet {
+        margin-top: 30px;
+    }
+
     @include tablet {
-        padding: 25px 5px 10px 5px;
         margin-top: 5px;
     }
 }
 
 .composition__wrap-pic {
     position: absolute;
-    top: -21px;
+    top: -31px;
     left: 50%;
     transform: translateX(-50%);
     padding: 0 55px 0 48px;
