add use desktop

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -202,6 +202,7 @@ img {
   padding: 9px 39px 6px 41px;
   font-size: 28px;
   line-height: 0.6;
+  font-weight: 700;
   background-color: transparent;
   border: 3px solid #ffd24e;
   border-radius: 100px;
