--- a/source/template/common/h__use.html
+++ b/source/template/common/h__use.html
@@ -25,7 +25,7 @@
         <div class="use-line"></div>
         <p class="use-advice">Повторяйте процедуру ежедневно и ваши ступни будут здоровыми!</p>
         <div class="btn-box">
-            <button type="submit" class="btn font_bold">Заказать  Микоцин <span class="small-text">со скидкой</span></button>
+            <button type="submit" class="btn ever-popup-btn">Заказать  Микоцин <span class="small-text">со скидкой</span></button>
         </div>
     </div>
 </section>
