--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -10,16 +10,16 @@ html
     link(rel='stylesheet' href='css/app.css')
     //- link(rel='stylesheet' href='css/foundation.css')
   body
-    //include ../common/a__intro.html
-    //include ../common/b__danger.html
-    //include ../common/c__inefficient.html
-    //include ../common/d__description.html
-    //include ../common/e__complex.html
-    //include ../common/f__recommendation.html
-    //include ../common/g__composition.html
+    include ../common/a__intro.html
+    include ../common/b__danger.html
+    include ../common/c__inefficient.html
+    include ../common/d__description.html
+    include ../common/e__complex.html
+    include ../common/f__recommendation.html
+    include ../common/g__composition.html
     include ../common/h__use.html
-    //include ../common/i__reviews.html
-    //include ../common/j__delivery.html
+    include ../common/i__reviews.html
+    include ../common/j__delivery.html
     include ../common/k__intro-bottom.html
     include ../common/popup.html
 
