--- a/source/template/common/a__intro.html
+++ b/source/template/common/a__intro.html
@@ -78,7 +78,9 @@
                 <div class="intro__pack">
                     <div class="intro__pack-tablets">
                         <div class="intro__pack-label font_black">299 <span class="intro__pacl-currency">₽</span></div>
-                        <img src="img/product-pack-tab.png" alt="" class="intro__pack-img">
+                        <div class="intro__tablets">
+                            <img src="img/product-pack-tab.png" alt="" class="intro__pack-img">
+                        </div>
                         <img src="img/product-tablets.png" alt="" class="intro__pack-img intro__pack-img_tablets">
                     </div>
                     <div class="intro__pack-gel">
