--- a/source/template/common/h__use.html
+++ b/source/template/common/h__use.html
@@ -1,4 +1,4 @@
-<section class="block use">
+<!-- <section class="block use">
     <div class="container">
         <h2 class="title title-decor use-title">Избавиться от грибка<br> с помощью комплекса Микоцин – ПРОСТО!</h2>
         <div class="use-wrap">
@@ -24,8 +24,8 @@
         </div>
         <div class="use-line"></div>
         <p class="use-advice">Повторяйте процедуру ежедневно и ваши ступни будут здоровыми!</p>
-        <div class="btn-box">
+        <div class="btn-box ever-popup-btn">
             <button type="submit" class="btn font_bold">Заказать  Микоцин <span class="small-text">со скидкой</span></button>
         </div>
     </div>
-</section>
+</section> -->
