--- a/source/style/common/a__intro.scss
+++ b/source/style/common/a__intro.scss
@@ -15,14 +15,20 @@
     height: 109px;
     background: url('../img/wave-bottom.png') calc(50% + -30px) 0 no-repeat;
     transform: scaleX(-1);
+
+    @include tablet {
+      display: none;
+    }
   }
 
   @include desktop {
     padding-bottom: 40px;
+    margin-bottom: 23px;
   }
 
   @include laptop {
     background-image: none;
+    margin-bottom: 0;
   }
 }
 
@@ -36,6 +42,10 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 10px;
+  }
+
+  @include tablet {
+    padding-top: 30px;
   }
 
   @include phone {
@@ -263,6 +273,10 @@
 
 }
 
+.intro__tablets {
+  max-width: 364px;
+}
+
 .intro__pack-label {
   position: absolute;
   top: -11px;
@@ -317,7 +331,7 @@
   position: absolute;
   top: 134px;
   left: 106px;
-  max-width: none;
+  width: 415px;
 
   @include desktop {
     width: calc(421px - 37%);
@@ -339,7 +353,6 @@
 }
 
 .intro__pack-img_gel {
-  max-width: none;
 
   @include desktop {
     width: 100%;
@@ -405,6 +418,10 @@
     font-size: 34px;
     width: 100%;
     margin: 0 auto 20px;
+  }
+
+  @include phone {
+    font-size: 26px;
   }
 
 }
@@ -547,6 +564,9 @@
     font-size: 29px;
   }
 
+  @include phone {
+    font-size: 24px;
+  }
 }
 
 .intro__desc-text {
