--- a/source/style/common/b__danger.scss
+++ b/source/style/common/b__danger.scss
@@ -9,6 +9,10 @@
     width: 100%;
     height: 109px;
     background: url('../img/wave-top.png') 0 0 no-repeat;
+
+    @include tablet {
+      display: none;
+    }
   }
 
   &-title {
@@ -302,6 +306,9 @@
 }
 @media screen and (max-width: 479px) {
   .danger {
+    &-title {
+      margin-bottom: 5px;
+    }
     &-slogan {
       font-size: 20px;
     }
