--- a/source/style/common/d__description.scss
+++ b/source/style/common/d__description.scss
@@ -9,6 +9,10 @@
     width: 100%;
     height: 109px;
     background: url('../img/wave-bottom.png') 0 0 no-repeat;
+
+    @include tablet {
+      display: none;
+    }
   }
 
 }
