--- a/source/style/common/g__composition.scss
+++ b/source/style/common/g__composition.scss
@@ -1,4 +1,11 @@
 .composition {
+    &.block {
+        padding-top: 0;
+
+        @include tablet {
+            padding-top: 30px;
+        }
+    }
 
     .container {
 
@@ -11,7 +18,7 @@
         }
 
         @include tablet {
-            max-width: 95%;
+            max-width: 100%;
         }
     }
 
@@ -19,11 +26,15 @@
         content: '';
         position: absolute;
         z-index: 1;
-        top: -86px;
+        top: -166px;
         display: block;
         width: 100%;
         height: 109px;
         background: url('../img/wave-bottom.png') 0 0 no-repeat;
+
+        @include tablet {
+            display: none;
+          }
       }
 
       &::after {
@@ -35,6 +46,10 @@
         width: 100%;
         height: 109px;
         background: url('../img/wave-top.png') 0 0 no-repeat;
+
+        @include tablet {
+            display: none;
+          }
       }
 
 }
@@ -150,6 +165,10 @@
 .composition__pack_gel {
     width: 117px;
     margin-right: 23px;
+
+    @include phone {
+        margin-right: 15px;
+    }
 }
 
 .composition__pack_tablets {
@@ -300,6 +319,10 @@
         margin-top: 5px;
     }
 
+    @include phone {
+        margin-top: 10px;
+    }
+
     .composition__item {
         flex-direction: row-reverse;
     }
@@ -334,6 +357,10 @@
 
     @include tablet {
         margin-top: 29px;
+    }
+
+    @include phone {
+        margin-top: 45px;
     }
 }
 
