--- a/source/style/common/i__reviews.scss
+++ b/source/style/common/i__reviews.scss
@@ -1,4 +1,11 @@
 .reviews {
+  &.block {
+    padding-top: 35px;
+
+    @include laptop {
+      padding-top: 15px;
+    }
+  }
 
   &::before {
     content: '';
@@ -9,6 +16,14 @@
     width: 100%;
     height: 109px;
     background: url('../img/wave-bottom.png') 0 0 no-repeat;
+
+    @include laptop {
+      top: -72px;
+    }
+
+    @include tablet {
+      display: none;
+    }
   }
 
 }
