--- a/source/style/common/j__delivery.scss
+++ b/source/style/common/j__delivery.scss
@@ -10,6 +10,10 @@
         width: 100%;
         height: 109px;
         background: url('../img/wave-top.png') 0 0 no-repeat;
+
+        @include tablet {
+            display: none;
+          }
       }
 
 }
