--- a/source/style/common/k__intro-bottom.scss
+++ b/source/style/common/k__intro-bottom.scss
@@ -1,9 +1,17 @@
 .intro_bottom {
-    padding-top: 25px;
+    padding-top: 30px;
+
+    .intro__header {
+        padding-top: 0;
+    }
 
     @include desktop {
         padding-bottom: 70px;
         margin-bottom: 0;
+    }
+
+    @include tablet {
+        padding-bottom: 30px;
     }
 
     &::after {
