--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -29,4 +29,4 @@ html
     script(src='./js/foundation.js')
     script(src='./js/app.js')
     script(src='./js/postDate.js')
-    //- script(src='./js/everad.js')
+    script(src='./js/everad.js')
