--- a/source/template/common/b__danger.html
+++ b/source/template/common/b__danger.html
@@ -1,7 +1,7 @@
 <section class="block danger">
     <div class="container">
         <h2 class="title title-decor danger-title">Грибок – это опасная инфекция</h2>
-        <p class="danger-slogan font_bold">которая угрожает вам и вашим близким, ведь с каждым днем грибок приводит&nbsp;к:</p>
+        <p class="danger-slogan font_bold">которая угрожает вам и вашим близким, ведь с каждым днем грибок приводит&nbsp;к</p>
         <div class="danger-wrap">
             <div class="danger-item">
                 <div class="danger-item__content">
@@ -50,7 +50,8 @@
             </div>
         </div>
         <div class="danger-stat">
-            <p class="danger-stat__text"><span class="font_medium color-text_black">Статистика:</span> каждые 60 секунд врачи диагностируют опасные поражения внутренних органов,<br>вызванные грибком, у 1-го пациент</p>
+            <p class="danger-stat__text"><span class="font_medium color-text_black">Статистика:</span> каждые 60 секунд врачи диагностируют опасные поражения
+                внутренних органов,<br>вызванные грибком, у одного пациента</p>
         </div>
     </div>
 </section>
