--- a/source/template/common/h__use.html
+++ b/source/template/common/h__use.html
@@ -1,6 +1,6 @@
 <section class="block use">
     <div class="container">
-        <h2 class="title title-decor use-title">Избавиться от грибка<br> с помощью комплекса Микоцин – ПРОСТО!</h2>
+        <h2 class="title title-decor use-title">Избавиться от грибка<br> с помощью комплекса Микоцин&nbsp;– ПРОСТО!</h2>
         <div class="use-wrap">
             <div class="use-item use-item__left">
                 <p class="use-item__title">Таблетки</p>
