--- a/source/style/common/h__use.scss
+++ b/source/style/common/h__use.scss
@@ -52,6 +52,10 @@
     justify-content: center;
   }
 
+  @include phone {
+    margin-bottom: 25px;
+  }
+
 }
 
 .use-item {
@@ -190,7 +194,6 @@
   @include phone {
     display: flex;
     flex-direction: column;
-    margin-bottom: 30px;
 
     .product-tab {
       position: static;
