--- a/source/style/common/i__reviews.scss
+++ b/source/style/common/i__reviews.scss
@@ -158,11 +158,23 @@
     }
   }
 
-  @include phone {
+  @include tablet {
 
     .slick-dots {
-      display: none !important;
 
+      &:before,
+      &:after{
+        display: none;
+      }
+
+    }
+
+  }
+
+  @include phone {
+
+    .slick-dots li {
+      margin: 0 3px;
     }
 
   }
@@ -188,7 +200,7 @@
   @include phone {
     top: 115px;
     z-index: 4;
-    cursor: none;
+    cursor: default;
   }
 
 }
