kh margin-bottom for reviews

--- a/source/style/common/i__reviews.scss
+++ b/source/style/common/i__reviews.scss
@@ -44,6 +44,10 @@
   line-height: 1;
 }
 
+.reviews_slider-box .slick-dotted.slick-slider {
+  margin-bottom: 40px;
+}
+
 .reviews_slider-box {
   position: relative;
 
