--- a/source/template/common/e__complex.html
+++ b/source/template/common/e__complex.html
@@ -5,7 +5,7 @@
         <div class="complex-wrap">
             <div class="complex-item complex-item_left">
                 <div class="complex-item__header">
-                    <p class="complex-item__title"><span>Внутреннее</span> применение&nbsp;–<br> таблетки</p>
+                    <p class="complex-item__title"><span class="border-orange-big">Внутреннее</span> применение&nbsp;–<br> таблетки</p>
                     <div class="complex-left__img"><img src="img/product-pack-tab.png" alt=""></div>
                 </div>
                 <ul class="complex-list">
@@ -38,7 +38,7 @@
             <div class="complex-item complex-item_right">
                 <div class="complex-item__header">
                     <div class="complex-right__img"><img src="img/product-gel.png" alt=""></div>
-                    <p class="complex-item__title"><span>Наружное</span> применение&nbsp;–<br> гель</p>
+                    <p class="complex-item__title"><span class="border-green-big">Наружное</span> применение&nbsp;–<br> гель</p>
                 </div>
                 <ul class="complex-list">
                     <li class="complex-list__item">
