--- a/source/template/common/a__intro.html
+++ b/source/template/common/a__intro.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="intro__desc">
-                <h1 class="intro__title font_black">Комплексное избавление от&nbsp;грибка — <span class="intro__title-small font_bold"> <span class="border-orange-big">изнутри</span>&nbsp;и <span class="border-green-big">снаружи</span></span></h1>
+                <h1 class="intro__title font_black">Комплексное избавление от&nbsp;грибка&nbsp;— <span class="intro__title-small font_bold"> <span class="border-orange-big">изнутри</span>&nbsp;и <span class="border-green-big">снаружи</span></span></h1>
                 <ul class="intro__desc-list">
                     <li class="intro__desc-item">
                         <div class="intro__desc-bullet font_bold">2в1</div>
@@ -77,14 +77,14 @@
             <div class="intro__form">
                 <div class="intro__pack">
                     <div class="intro__pack-tablets">
-                        <div class="intro__pack-label font_black x_price_current">299 <span class="intro__pacl-currency x_currency">₽</span></div>
+                        <div class="intro__pack-label font_black"><span class="x_price_current">299</span><span class="intro__pacl-currency x_currency">₽</span></div>
                         <div class="intro__tablets">
                             <img src="img/product-pack-tab.png" alt="" class="intro__pack-img">
                         </div>
                         <img src="img/product-tablets.png" alt="" class="intro__pack-img intro__pack-img_tablets">
                     </div>
                     <div class="intro__pack-gel">
-                        <div class="intro__pack-label intro__pack-label_island font_black x_price_current">299 <span class="intro__pacl-currency x_currency">₽</span></div>
+                        <div class="intro__pack-label intro__pack-label_island font_black"><span class="x_price_current">299</span><span class="intro__pacl-currency x_currency">₽</span></div>
                         <img src="img/product-gel.png" alt="" class="intro__pack-img intro__pack-img_gel">
                     </div>
                     <img src="img/product-stick.png" alt="" class="intro__pack-img intro__pack-img_stick">
